# agentic-design-workflows

./: main.py  pyproject.toml
using-crewai/: .env.example  pyproject.toml
using-crewai/crewai/flow/: py.typed
using-crewai/src/using_crewai/: __init__.py
using-crewai/src/using_crewai/orchestrator/: orchestrator.py
using-crewai/src/using_crewai/parallelization/: para.py
using-crewai/src/using_crewai/prompt_chaining/: prompt_chaining.py
using-crewai/src/using_crewai/routerflow/: router.py
using-langgraph/: pyproject.toml
using-langgraph/src/using_langgraph/: __init__.py
using-langgraph/src/using_langgraph/promp_chaining/: prompt_chaining.py
