[project]
name = "using-crewai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hammad", email = "devhammad.m@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.102.0",
    "litellm>=1.60.2",
]

[project.scripts]
using-crewai = "using_crewai:main"
chain = "using_crewai.prompt_chaining.prompt_chaining:kickoff"
router = "using_crewai.routerflow.router:kickoff"
para = "using_crewai.parallelization.para:kickoff"
orchest = "using_crewai.orchestrator.orchestrator:kickoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/using_crewai"]
